# MBROLA

./: .gitignore  Makefile
src/: CMakeLists.txt  synth.c  synth.h
src/Database/: database.c  database.h  database_old.c  database_old.h  diphone_info.c  diphone_info.h  hash_tab.c  hash_tab.h  little_big.c  little_big.h  zstring_list.c  zstring_list.h
src/Engine/: diphone.c  diphone.h  mbrola.c  mbrola.h
src/Misc/: audio.c  audio.h  common.c  common.h  g711.c  g711.h  incdll.h  mbralloc.c  mbralloc.h  parser_export.h  vp_error.c  vp_error.h
src/Parser/: fifo.c  fifo.h  input.h  input_fifo.c  input_fifo.h  input_file.c  input_file.h  parser.h  parser_input.c  parser_input.h  phonbuff.c  phonbuff.h  phone.c  phone.h  phone_export.h
src/database/: database.c  database.h  diphone_info.c  diphone_info.h  hash_tab.c  hash_tab.h  little_big.h  zstring_list.c  zstring_list.h
src/engine/: diphone.h  mbrola.c  mbrola.h
src/misc/: audio.c
src/parser/: fifo.c  input_fifo.c  input_file.c  phonbuff.c  phonbuff.h  phone.c  phone.h  phone_export.h
